# kaplay-template

./: CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
src/: gamescene.ts  gamestate.ts  loader.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/plugins/: confetti.ts  positionsetter.ts  volumebar.ts
src/scenes/: gamescene.ts
